# ka_purn_tui

./: .gitignore  README.md  _app_push.json  _batch1.json  _batch2.json  _push_batch.json  config.jsonc  config_guide.md  deepseek_chat.py  install.bat  install.sh  pyproject.toml
docs/: ARCHITECTURE.md  TOOLS.md
ka_purn_tui/: __init__.py  __main__.py  app.py  commands.py  config.py
ka_purn_tui/api/: __init__.py  client.py
ka_purn_tui/modes/: __init__.py  base.py  chat.py  novel.py
ka_purn_tui/panels/: __init__.py  base.py  chapter_panel.py  file_preview_panel.py  file_tree_panel.py  side_panels.py  todo_panel.py
ka_purn_tui/state/: __init__.py  novel_state.py  project_state.py  session_store.py
ka_purn_tui/tools/: __init__.py  chapter_tools.py  executor.py  file_tools.py  memory_tools.py  registry.py  todo_tools.py
ka_purn_tui/widgets/: __init__.py  chat_view.py  input_bar.py  sessions_screen.py
