[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "K.A-purn-tui"
version = "0.2.0"
description = "K.A-purn-tui - 聊天 + 小说创作模式（Textual 分屏）"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.50.0",
    "httpx>=0.27.0",
    "rich>=13.7.0",
    "tokenizers>=0.19.0",
    "send2trash>=1.8.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.4.0"]

[project.scripts]
ka-purn-tui = "ka_purn_tui.app:main"

[tool.setuptools]
packages = ["ka_purn_tui", "ka_purn_tui.api", "ka_purn_tui.modes", "ka_purn_tui.panels", "ka_purn_tui.tools", "ka_purn_tui.state", "ka_purn_tui.widgets"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]
